// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowHideFocuser should render divider spans and a span to focus to correctly 1`] = `
<p>
  <span
    class="text-divider"
  />
  <span
    id="focus-ref-00000000-0000-0000-0000-000000000000"
    role="group"
    tabindex="-1"
  >
    In fact, the U.S. ambulatory surgery center market is expected to see a 6.9 % compound annual growth rate, reaching $33 billion by 2028. (2) Cerner
  </span>
  <span
    class="text-divider"
  />
   understands the urgency to grow in the ambulatory surgery center market while continuing to deliver excellent care.
</p>
`;

exports[`ShowHideFocuser should render focusable text correctly 1`] = `
<p>
  <span
    class="text-divider"
  />
  <span
    id="focus-ref-00000000-0000-0000-0000-000000000000"
    role="group"
    tabindex="-1"
  >
    In fact, the U.S. ambulatory surgery center market is expected to see a 6.9 % compound annual growth rate, reaching $33 billion by 2028. (2) Cerner
  </span>
  <span
    class="text-divider"
  />
   understands the urgency to grow in the ambulatory surgery center market while continuing to deliver excellent care.
</p>
`;

exports[`ShowHideFocuser should render preview text correctly 1`] = `
<p>
  Patients are requesting greater affordability and efficiency in healthcare. 
  <span
    class="text-divider"
  />
  <span
    id="focus-ref-00000000-0000-0000-0000-000000000000"
    role="group"
    tabindex="-1"
  >
    In fact, the U.S. ambulatory surgery center market is expected to see a 6.9 % compound annual growth rate, reaching $33 billion by 2028. (2) Cerner
  </span>
  <span
    class="text-divider"
  />
   understands the urgency to grow in the ambulatory surgery center market while continuing to deliver excellent care.
</p>
`;
